--- a/projects/templates/project_index.html
+++ b/projects/templates/project_index.html
@@ -24,7 +24,7 @@
 </div>
 <div class="row">
 	<div>
-		<p>Some hobbies that I like to do are:</p>
+		<p>List of Hobbies:</p>
 	</div>
 	<div class="col-md-4">
 		<ul>
@@ -40,13 +40,13 @@
 	<h1>CCAs</h1>
 </div>
 <div class="row">
-	<p>In Ngee Ann Polytechnic, I have joined a few CCAs, for example...</p>
+	<p>List of CCAs in Ngee Ann Polytechnic: </p>
 </div>
 <div class="row">
 	<div class="col-md-3">
         <div class="card mb-2">
             <div class="card-body">
-                <h5 class="card-title">Football</h5>
+                <h5 class="card-title">Futsal</h5>
 				<i class="fa fa-soccer-ball-o"></i>
             </div>
         </div>
@@ -62,7 +62,7 @@
 	<div class="col-md-3">
         <div class="card mb-2">
             <div class="card-body">
-                <h5 class="card-title">ICT Society</h5>
+                <h5 class="card-title">ICT Society(An events planning commitee for the school of ICT)</h5>
 				<i class="fas fa-bullhorn"></i>
             </div>
         </div>
