--- a/projects/templates/project_index.html
+++ b/projects/templates/project_index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
 {% block page_content %}
-<h1>Projects I have Done</h1>
+<h1>Projects I Have Done</h1>
 <div class="row">
 {% for project in projects %}
     <div class="col-md-4">
@@ -18,6 +18,55 @@
         </div>
     </div>
     {% endfor %}
+</div>
+<div class="row">
+	<h1>Hobbies</h1>
+</div>
+<div class="row">
+	<div>
+		<p>List of Hobbies:</p>
+	</div>
+	<div class="col-md-4">
+		<ul>
+			<li>Running</li>
+			<li>Football</li>
+			<li>Swimming</li>
+			<li>Playing online games</li>
+			<li>Basketball</li>
+		</ul>
+	</div>
+</div>
+<div class = "row">
+	<h1>CCAs</h1>
+</div>
+<div class="row">
+	<p>List of CCAs in Ngee Ann Polytechnic: </p>
+</div>
+<div class="row">
+	<div class="col-md-3">
+        <div class="card mb-2">
+            <div class="card-body">
+                <h5 class="card-title">Futsal</h5>
+				<i class="fa fa-soccer-ball-o"></i>
+            </div>
+        </div>
+    </div>
+	<div class="col-md-3">
+        <div class="card mb-2">
+            <div class="card-body">
+                <h5 class="card-title">Rock Climbing</h5>
+				<i class="fa fa-hand-rock-o"></i>
+            </div>
+        </div>
+    </div>
+	<div class="col-md-3">
+        <div class="card mb-2">
+            <div class="card-body">
+                <h5 class="card-title">ICT Society(An events planning commitee for the school of ICT)</h5>
+				<i class="fas fa-bullhorn"></i>
+            </div>
+        </div>
+    </div>
 </div>
 
 {% endblock %}
