Test cases for admin page

--- a/projects/templates/project_index.html
+++ b/projects/templates/project_index.html
@@ -62,7 +62,8 @@
 	<div class="col-md-3">
         <div class="card mb-2">
             <div class="card-body">
-                <h5 class="card-title">ICT Society(An events planning commitee for the school of ICT)</h5>
+                <h5 class="card-title">ICT Society</h5>
+				<p class="card-text">An events planning commitee for the school of ICT</p>
 				<i class="fas fa-bullhorn"></i>
             </div>
         </div>
